feat: 完善整个首页和搜索，用户详情页

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,25 +1,11 @@
 name: rush_audio_chat
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2
+  sdk: ^3.7.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,30 +20,42 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  #国际化
+  # Internationalization
   flutter_localizations:
     sdk: flutter
-  #路由工具
+  # Routing tool
   fluro: ^2.0.5
-  #状态管理
+  # State management
   provider: ^6.1.2
-  #底部导航栏组件
+  # Bottom navigation bar component
   circular_bottom_navigation: ^2.4.0
-  #瀑布流
+  # Staggered grid view
   flutter_staggered_grid_view: ^0.7.0
-  #缓冲头像
+  # Cached network image
   cached_network_image: ^3.4.1
-  #设置界面ui组件
+  # Settings UI component
   settings_ui: ^2.0.2
-  #banner播放
+  # Banner swiper
   card_swiper: ^3.0.1
-  #弹窗
+  # Dialog
   giffy_dialog: ^2.3.0
-  #更多的icon
+  # More icons
   material_design_icons_flutter: ^7.0.7296
-  #下拉，上拉 刷新
+  # Pull to refresh
   easy_refresh: ^3.4.0
   extended_nested_scroll_view: ^6.2.1
+  # HTTP requests
+  dio: ^5.7.0
+  # Local storage
+  shared_preferences: ^2.3.3
+  # Image picker
+  image_picker: ^1.1.2
+  # Permission handler
+  permission_handler: ^11.3.1
+  # SQLite database
+  sqflite: ^2.3.3+1
+  # Path provider
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
@@ -69,17 +67,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  # Build runner for code generation
+  build_runner: ^2.4.13
+  # JSON annotation for serialization
+  json_annotation: ^4.9.0
+  json_serializable: ^6.8.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
   generate: true
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
   assets:
     - assets/img/
