--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,12 @@ dependencies:
   sqflite: ^2.3.3+1
   # Path provider
   path: ^1.9.0
+  # Agora RTC Engine for audio/video calls
+  agora_rtc_engine: ^6.3.2
+  # Wakelock to keep screen on during calls
+  wakelock_plus: ^1.2.8
+  # Audio session management
+  audio_session: ^0.1.21
 
 dev_dependencies:
   flutter_test:
